<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_txt"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="italic"
            android:layout_margin="24dp"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/et_phone"
            android:hint="@string/phone_hint"
            android:layout_gravity="center"
            android:background="@drawable/et_bg"
            android:inputType="phone"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:maxLength="11"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_margin="8dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:gravity="center_horizontal">
        <EditText
            android:id="@+id/et_pass"
            android:hint="@string/pass_hint"
            android:layout_gravity="center"
            android:background="@drawable/et_bg"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:maxLength="11"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_margin="8dp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/deep_red"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:foreground="?android:attr/selectableItemBackground"
            android:visibility="gone"
            android:layout_marginEnd="50dp"/>

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/login"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_marginStart="20dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/no_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tv_signUp_here"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/signup_here"
                android:foreground="?android:attr/selectableItemBackground"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>