<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="5dp"
        app:cardElevation="10dp">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_keyboard_backspace_black_24dp"
            android:layout_gravity="center_vertical"
            android:background="@color/fui_transparent"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginStart="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center_vertical|center_horizontal"
            android:padding="5dp"/>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/emptyCart"
        android:layout_below="@+id/toolbar"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:paddingBottom="50dp"
        android:text="@string/no_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/removeCart"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:text="@string/remove_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:textStyle="italic"
        android:textAlignment="center"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listCart"
        android:layout_below="@+id/removeCart"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="450dp" />

    <android.support.v7.widget.CardView
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/zero"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_charge_excluded"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/signup"/>

            </LinearLayout>

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_charge"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/serviceCharge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/five"
                    android:textColor="@color/white"/>

            </LinearLayout>



            <TextView
                android:id="@+id/btnPlaceOrder"
                android:background="@drawable/button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/order"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>