<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Verification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/post_otp_header"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/post_otp"
            android:textStyle="italic"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextCode"
            android:layout_width="300dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/et_bg"
            android:layout_height="50dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:digits="0123456789"
            android:hint="@string/otp_hint"
            android:maxLength="6" />


        <TextView
            android:id="@+id/btn_signIn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/signin"
            android:background="@drawable/button"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>