<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutusActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="5dp"
        app:cardElevation="10dp">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_keyboard_backspace_black_24dp"
            android:layout_gravity="center_vertical"
            android:background="@color/fui_transparent"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginStart="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center_vertical|center_horizontal"
            android:padding="5dp"/>


    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                android:layout_margin="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/app"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app"
                        android:textSize="20sp"
                        android:textStyle="bold|italic"
                        android:layout_marginBottom="10dp"
                        />

                    <ImageView
                        android:id="@+id/about_logo"
                        android:layout_below="@+id/app"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:padding="8dp"
                        android:src="@drawable/logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/app"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@+id/about_logo"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/about_version"
                        android:layout_below="@+id/about_logo"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_info_black_24dp" />

                    <TextView
                        android:id="@+id/txt_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/about_logo"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/about_version"
                        android:text="@string/version"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/about_version"
                        android:layout_below="@+id/txt_version"
                        android:text="@string/version_no"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"/>

                    <ImageView
                        android:id="@+id/about_terms"
                        android:layout_below="@+id/about_version"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_assignment_turned_in_black_24dp" />

                    <TextView
                        android:id="@+id/tAndC"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/about_version"
                        android:layout_marginStart="20dp"
                        android:paddingTop="10dp"
                        android:layout_toEndOf="@+id/about_terms"
                        android:text="@string/terms"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </RelativeLayout>


            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textSize="20sp"
                        android:textStyle="bold|italic"
                        android:layout_marginBottom="10dp"
                        />

                    <ImageView
                        android:id="@+id/about_author"
                        android:layout_below="@+id/author"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_account_circle_black_24dp" />

                    <TextView
                        android:id="@+id/txt_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/author"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@+id/about_author"
                        android:text="@string/author_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/about_share"
                        android:layout_below="@+id/about_author"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_share_black_24dp" />

                    <TextView
                        android:id="@+id/share"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_below="@+id/about_author"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/about_share"
                        android:text="@string/share"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingTop="10dp"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="20dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company"
                        android:textSize="20sp"
                        android:textStyle="bold|italic"
                        android:layout_marginBottom="10dp"
                        />

                    <ImageView
                        android:id="@+id/about_company"
                        android:layout_below="@+id/company"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_domain_black_24dp" />

                    <TextView
                        android:id="@+id/txt_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/company"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/about_company"
                        android:text="@string/company_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/about_company"
                        android:layout_below="@+id/txt_company"
                        android:text="@string/company_phone"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"/>

                    <ImageView
                        android:id="@+id/about_address"
                        android:layout_below="@+id/about_company"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_place_black_24dp" />
                    <TextView
                        android:id="@+id/txt_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/about_address"
                        android:layout_below="@+id/about_company"
                        android:text="@string/address"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/about_address"
                        android:layout_below="@+id/txt_address"
                        android:text="@string/address_behind"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>



</LinearLayout>